--- a/templates/take-quiz.html
+++ b/templates/take-quiz.html
@@ -5,16 +5,43 @@
             <!-- Categories -->
             <section id="take-quiz">
               <div class="card text-bg-light mb-3 m-auto" style="max-width: 50rem;">
-                <div class="card-header">Category Title</div>
+                <div class="card-header">Category: {{ question.category }}</div>
                 <div class="card-body">
-                  <div class="row">
-                    <div class="">
-                        <p>Question 1:</p>
-                        <p>{{ questions[0].question }}</p>
-                        <a class="btn btn-primary" href="{{ url_for('take_quiz', quiz_on = True) }}">Skip Question</a>
-                        <a class="btn btn-primary" href="{{ url_for('take_quiz', quiz_on = True) }}">Check Answer</a>
-                    </div>
-                  </div>
+                        <p>Question {{ num_q }}:</p>
+                        <p>{{ question.question }}</p>
+                        <form action="{{ url_for('check_answer') }}" method="POST">
+                        <input name="correct_answer" hidden="hidden" value="{{ question.correct_answer }}">
+                        <input name="num_q" hidden="hidden" value="{{ num_q }}">
+                        <input name="question" hidden="hidden" value="{{ question }}">
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="answer" id="flexRadioDefault1" value="{{ question.correct_answer }}">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              {{ question.correct_answer }}
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="answer" id="flexRadioDefault2" value="{{ question.incorrect_answers[0] }}">
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              {{ question.incorrect_answers[0] }}
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="answer" id="flexRadioDefault3" value="{{ question.incorrect_answers[1] }}">
+                            <label class="form-check-label" for="flexRadioDefault3">
+                              {{ question.incorrect_answers[1] }}
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="answer" id="flexRadioDefault4" value="{{ question.incorrect_answers[2] }}">
+                            <label class="form-check-label" for="flexRadioDefault4">
+                              {{ question.incorrect_answers[2] }}
+                            </label>
+                          </div>
+                          <div class="btn-container">
+                            <button type="submit" class="btn btn-primary">Check Answer</button>
+                            <a class="btn btn-primary" href="{{ url_for('take_quiz', num_q = num_q, quiz_on = True) }}">Next Question</a>
+                          </div>
+                        </form>
                 </div>
               </div>
             </section>
