--- a/templates/select-difficulty.html
+++ b/templates/select-difficulty.html
@@ -2,7 +2,7 @@
         <!-- Your page content -->
         {% if empty %}
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
-          <strong>No {{ difficulty.title() }}!</strong> Select other difficulty.
+          <strong>No questions for {{ difficulty.title() }} mode right now!</strong> Select other difficulty.
           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         {% endif %}
